[update] v0.0.5: update upstream base from apache/poi@6a8994e (5.2.5 era) to REL_5_5_1 (POI 5.5.1, Nov 2025)
- Regenerate 238 carried sources from apache/poi REL_5_5_1 (094968cf) with fork conventions preserved (m.co.rh.id.apoi_spreadsheet prefix, android.util.Log, no TempFile/awt); carry new Android-safe classes (HSSFParser/XSSFParser, HSSFReadException/XSSFReadException, ReferenceRelationship, OPCComplianceFlags, CleanerUtil, Reproducibility, etc.)

- Android adaptation fixes so poi and poi-ooxml compile on 5.5.1 base

- Dependencies to upstream 5.5.1 baseline: poi-ooxml-full 5.5.1, commons-io 2.21.0, commons-collections4 4.5.0, commons-compress 1.28.0 (with ZipFile.builder() migration), commons-codec 1.20.0, xmlsec 3.0.6; module versions 0.0.4 -> 0.0.5

- Legal/docs: NOTICE/LICENSE years, fork point reference, README changelog; untrack __pycache__

- Instrumented tests: 39 upstream-changed test files ported to JUnit 4 style (32 material changes, 7 already in sync) + 6 new tests (HSSFParser, XSSFParser, HSSFRowCopyRowFrom, WorkdayFunc, CellUtil, OutOfOrderColumns) + new test-data binaries (bug63189/69769/69812.xlsx, duplicate-filename*.xlsx, clusterfuzz testcase)

- Review fixes applied: LICENSE UTF-8 mojibake (byte-parity with master), TestXSSFBugs bug47504 indentation, changelog wording